manifestos-k8s/auth-service/deploy-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: auth-service
        image: docker.io/auth-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8005
