manifestos-k8s/auth-service/svc-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
  namespace: default
spec:
  selector:
    app: auth-service
  ports:
  - name: http
    port: 80
    targetPort: 8005
